# vcf-variant-filtering-demo

./: Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md  mock_clinvar.json
docs/: architecture.md  usage_examples.md
notebooks/: exploratory.ipynb
results/: filtered_output.vcf
scripts/: annotate_clinvar.py  filter_variants.py  generate_report.py  utils.py
tests/: conftest.py  test_annotate_clinvar.py  test_filter_variants.py  test_utils.py
